fix monthly calendar view

--- a/plan_calendar/src/main/res/values/strings.xml
+++ b/plan_calendar/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">plan calendar</string>
+    <string name="sat">Sat</string>
+    <string name="fri">Fri</string>
+    <string name="thu">Thu</string>
+    <string name="wed">Wed</string>
+    <string name="tue">Tue</string>
+    <string name="mon">Mon</string>
+    <string name="sun">Sun</string>
 </resources>
